Uart test program in C running (even on Hardware...)

--- a/ppro.ucf
+++ b/ppro.ucf
@@ -37,6 +37,9 @@ NET sysclk_32m     LOC="P94"  | IOSTANDARD=LVTTL | PERIOD=31.25ns;              
 NET uart0_rxd      LOC="P101" | IOSTANDARD=LVTTL | DRIVE=8 | SLEW=FAST;          # RX
 NET uart0_txd      LOC="P105" | IOSTANDARD=LVTTL | DRIVE=8 | SLEW=FAST; 			# TX
 
+NET I_RESET        LOC="P85"  | IOSTANDARD=LVTTL | PULLDOWN;                     # A11
+NET LED1           LOC="P112" | IOSTANDARD=LVTTL | DRIVE=8 | SLEW=SLOW;          # LED1
+
 ##LEDs
 NET leds(3)         LOC="P61"  | IOSTANDARD=LVTTL | DRIVE=12;                    # A4
 NET leds(2)         LOC="P66"  | IOSTANDARD=LVTTL | DRIVE=12;                                # A5
