Get data2mem working
To allow data2mem replacing the memory content the RAM DWORDs must be
ordered low byte first in the bitfile. But this bit order of a bit is 7
downto 0. For this reason byte swaping in module MainMemory.vhd is
implemented. It can be switched of for simulation because it is more
comfortable to work without byte swapping in simulation

--- a/riscv/software/cpptest/Makefile
+++ b/riscv/software/cpptest/Makefile
@@ -8,16 +8,16 @@ TARGET_SIZE := $(TARGET_PREFIX)-size
 TARGET_OBJCOPY := $(TARGET_PREFIX)-objcopy
 HEXDUMP ?= hexdump
 
-TARGET_CFLAGS += -m32 -march=RV32IM -Wall -Os -fomit-frame-pointer \
+TARGET_CFLAGS += -m32 -march=RV32IM -Wall -Os  -fomit-frame-pointer \
           -msoft-float\
 	-ffreestanding -fno-builtin  \
 	-Wall -Werror=implicit-function-declaration
 
-TARGET_LDFLAGS += -m32 -march=RV32I -nostartfiles \
+TARGET_LDFLAGS += -m32 -march=RV32I -nostartfiles  \
 	-Wl,-m,elf32lriscv --specs=nosys.specs -Wl,-Tlxp.ld \
 	-Wl,--gc-sections
 
-all: hello.hex mult.hex counter.hex memtest.hex
+all: ledslow.hex mult.hex counter.hex memtest.hex ledsim.hex 
 	
 
 
@@ -32,14 +32,17 @@ all: hello.hex mult.hex counter.hex memtest.hex
 %.hex : %.elf
 	$(TARGET_OBJCOPY) -j .text -j .data -O binary $< $(basename $@).bin
 	$(HEXDUMP) -v -e '1/4 "%08x\n"' $(basename $@).bin >$@	
-	$(TARGET_PREFIX)-objdump -d $< >$(basename $@).lst
+	$(TARGET_PREFIX)-objdump -S -d $< >$(basename $@).lst
 	$(TARGET_PREFIX)-objdump -s $< >$(basename $@).dmp 
 	$(TARGET_PREFIX)-size  $<
 
 
 
-hello.elf: start.o hello.o
-	$(TARGET_LD) -o $@ $(TARGET_LDFLAGS) start.o hello.o
+ledslow.elf: start.o ledslow.o
+	$(TARGET_LD) -o $@ $(TARGET_LDFLAGS) start.o ledslow.o
+	
+ledsim.elf: start.o ledsim.o
+	$(TARGET_LD) -o $@ $(TARGET_LDFLAGS) start.o ledsim.o	
 
 
 mult.elf: start.o mult.o
