Optimized wbs_sdram_interface
Optimized wbs_sdram_interface
Added data2mem bitfile generation into Makefile (not very portable
yet...)
Simulator test program for testing code burst reads to DRAM

--- a/.gitignore
+++ b/.gitignore
@@ -19,3 +19,6 @@
 /platform/wildfire_papro/bram_verify.vhd
 /platform/wildfire_papro/dram_verify.vhd
 /platform/wildfire_papro/dram_verify16.vhd
+/software/wildfire/test/memtest.vhd
+/software/wildfire/test/mult.vhd
+/spartan9/mult.vhd
