--- a/.gitignore
+++ b/.gitignore
@@ -13,15 +13,10 @@
 /spartan9/soc_bd.bmm
 /platform/wildfire_papro/soc_bd.bmm
 /spartan9/memtest.vhd
-/platform/wildfire_papro/wf_ledslow.vhd
-/platform/wildfire_papro/wf_memtest.vhd
-/platform/wildfire_papro/wf_mult.vhd
-/platform/wildfire_papro/ledslow.vhd
-/platform/wildfire_papro/bram_verify.vhd
-/platform/wildfire_papro/dram_verify.vhd
-/platform/wildfire_papro/dram_verify16.vhd
-/software/wildfire/test/memtest.vhd
-/software/wildfire/test/mult.vhd
-/spartan9/mult.vhd
-/software/wildfire/monitor/monitor.vhd
-/software/wildfire/dhrystone/dhrystone_bram.vhd
+/platform/wildfire_papro/*.vhd
+/software/wildfire/test/*.vhd
+/spartan9/*
+/software/wildfire/monitor/*.vhd
+/software/wildfire/dhrystone/*.vhd
+/build/*
+/fusesoc.log
