--- a/ppro_dram.ucf
+++ b/ppro_dram.ucf
@@ -46,11 +46,37 @@ NET uart1_txd      LOC="P134" | IOSTANDARD=LVTTL | DRIVE=8 | SLEW=SLOW;         
 NET I_RESET        LOC="P85"  | IOSTANDARD=LVTTL | PULLDOWN;                     # A11
 NET LED1           LOC="P112" | IOSTANDARD=LVTTL | DRIVE=8 | SLEW=SLOW;          # LED1
 
-##LEDs
-NET leds(3)         LOC="P61"  | IOSTANDARD=LVTTL | DRIVE=12;                    # A4
-NET leds(2)         LOC="P66"  | IOSTANDARD=LVTTL | DRIVE=12;                                # A5
-NET leds(1)         LOC="P67"  | IOSTANDARD=LVTTL | DRIVE=12;                                # A6
-NET leds(0)         LOC="P75"  | IOSTANDARD=LVTTL | DRIVE=12;                                # A7
+###LEDs
+#NET leds(3)         LOC="P61"  | IOSTANDARD=LVTTL | DRIVE=12;                    # A4
+#NET leds(2)         LOC="P66"  | IOSTANDARD=LVTTL | DRIVE=12;                                # A5
+#NET leds(1)         LOC="P67"  | IOSTANDARD=LVTTL | DRIVE=12;                                # A6
+#NET leds(0)         LOC="P75"  | IOSTANDARD=LVTTL | DRIVE=12;                                # A7
+NET gpio_pad(0)           LOC="P48"  | IOSTANDARD=LVTTL;                                # A0
+NET gpio_pad(1)           LOC="P51"  | IOSTANDARD=LVTTL;                                # A1
+NET gpio_pad(2)           LOC="P56"  | IOSTANDARD=LVTTL;                                # A2
+NET gpio_pad(3)           LOC="P58"  | IOSTANDARD=LVTTL;                                # A3
+NET gpio_pad(4)           LOC="P61"  | IOSTANDARD=LVTTL;                                # A4
+NET gpio_pad(5)           LOC="P66"  | IOSTANDARD=LVTTL;                                # A5
+NET gpio_pad(6)           LOC="P67"  | IOSTANDARD=LVTTL;                                # A6
+NET gpio_pad(7)           LOC="P75"  | IOSTANDARD=LVTTL;                                # A7
+NET gpio_pad(8)           LOC="P79"  | IOSTANDARD=LVTTL;                                # A8
+NET gpio_pad(9)           LOC="P81"  | IOSTANDARD=LVTTL;                                # A9
+NET gpio_pad(10)          LOC="P83"  | IOSTANDARD=LVTTL;                                # A10
+NET gpio_pad(11)           LOC="P114" | IOSTANDARD=LVTTL;                                # C0
+NET gpio_pad(12)           LOC="P115" | IOSTANDARD=LVTTL;                                # C1
+NET gpio_pad(13)           LOC="P116" | IOSTANDARD=LVTTL;                                # C2
+NET gpio_pad(14)           LOC="P117" | IOSTANDARD=LVTTL;                                # C3
+NET gpio_pad(15)           LOC="P118" | IOSTANDARD=LVTTL;                                # C4
+NET gpio_pad(16)           LOC="P119" | IOSTANDARD=LVTTL;                                # C5
+NET gpio_pad(17)           LOC="P120" | IOSTANDARD=LVTTL;                                # C6
+NET gpio_pad(18)           LOC="P121" | IOSTANDARD=LVTTL;                                # C7
+NET gpio_pad(19)           LOC="P123" | IOSTANDARD=LVTTL;                                # C8
+NET gpio_pad(20)           LOC="P124" | IOSTANDARD=LVTTL;                                # C9
+NET gpio_pad(21)          LOC="P126" | IOSTANDARD=LVTTL;                                # C10
+NET gpio_pad(22)          LOC="P127" | IOSTANDARD=LVTTL;                                # C11
+NET gpio_pad(23)          LOC="P131" | IOSTANDARD=LVTTL;                                # C12
+NET gpio_pad(24)          LOC="P132" | IOSTANDARD=LVTTL;                                # C13
+
 
 # SPI flash on Papilio Pro (MX25L6445E)
 NET flash_spi_cs    LOC="P38"  | IOSTANDARD=LVTTL | SLEW=FAST;
